simplify some codes

--- a/causal_inference/propensity_score_basic.ipynb
+++ b/causal_inference/propensity_score_basic.ipynb
@@ -43,7 +43,7 @@
    "outputs": [],
    "source": [
     "# データの読み込み\n",
-    "data_df = pd.read_csv(\"http://biostat.mc.vanderbilt.edu/wiki/pub/Main/DataSets/rhc.csv\")\n",
+    "df = pd.read_csv(\"http://biostat.mc.vanderbilt.edu/wiki/pub/Main/DataSets/rhc.csv\")\n",
     "#data_df.head()"
    ]
   },
@@ -111,7 +111,7 @@
    ],
    "source": [
     "# 死亡率とRHCの有無のクロス集計\n",
-    "pd.crosstab(data_df.death, data_df.swang1)"
+    "pd.crosstab(df.death, df.swang1)"
    ]
   },
   {
@@ -155,17 +155,17 @@
     "                       \"resp\", \"card\", \"neuro\", \"gastr\", \"renal\", \"meta\", \"hema\", \"seps\", \"trauma\", \"ortho\"]\n",
     "\n",
     "# カテゴリカル変数のダミー化\n",
-    "data_df.loc[:, \"Intercept\"] = 1\n",
-    "X = data_df[cols + [\"Intercept\"]]\n",
+    "df.loc[:, \"Intercept\"] = 1\n",
+    "X = df[cols + [\"Intercept\"]]\n",
     "dummy = pd.get_dummies(X[categorical_columns])\n",
     "X = pd.concat([X, dummy], axis=1).drop(categorical_columns, axis=1).values\n",
     "\n",
     "\n",
     "# RHC有無のダミー変数\n",
-    "w1 = pd.get_dummies(data_df[\"swang1\"])[\"RHC\"].values\n",
+    "w1 = pd.get_dummies(df[\"swang1\"])[\"RHC\"].values\n",
     "\n",
     "# 目的変数\n",
-    "y = pd.get_dummies(data_df[\"death\"])[\"Yes\"].values"
+    "y = pd.get_dummies(df[\"death\"])[\"Yes\"].values"
    ]
   },
   {
@@ -243,8 +243,8 @@
     "# IPWによりATEを推定\n",
     "ipwe1 = np.sum((w1 * y) / ps1) / np.sum(w1 / ps1)\n",
     "ipwe0 = np.sum(((1 - w1) * y) / (1.0 - ps1)) / np.sum((1 - w1) / (1.0 - ps1))\n",
-    "ATE = ipwe1 - ipwe0\n",
-    "ATE"
+    "ate = ipwe1 - ipwe0\n",
+    "ate"
    ]
   },
   {
@@ -468,8 +468,8 @@
    ],
    "source": [
     "# データの読み込み\n",
-    "data_df = pd.read_csv('https://github.com/iwanami-datascience/vol3/raw/master/kato%26hoshino/q_data_x.csv')\n",
-    "data_df.head()"
+    "df = pd.read_csv('https://github.com/iwanami-datascience/vol3/raw/master/kato%26hoshino/q_data_x.csv')\n",
+    "df.head()"
    ]
   },
   {
@@ -490,7 +490,7 @@
    ],
    "source": [
     "# CM視聴有無でのアプリ利用率の差を計算\n",
-    "data_df[data_df.cm_dummy == 1].gamedummy.mean() - data_df[data_df.cm_dummy == 0].gamedummy.mean()"
+    "np.mean(df[df.cm_dummy == 1].gamedummy.values) - np.mean(df[df.cm_dummy == 0].gamedummy.values)"
    ]
   },
   {
@@ -511,7 +511,7 @@
    ],
    "source": [
     "# CM視聴有無でのアプリ利用回数の差を計算\n",
-    "data_df[data_df.cm_dummy == 1].gamecount.mean() - data_df[data_df.cm_dummy == 0].gamecount.mean()"
+    "np.mean(df[df.cm_dummy == 1].gamecount.values) - np.mean(df[df.cm_dummy == 0].gamecount.values)"
    ]
   },
   {
@@ -532,8 +532,15 @@
    ],
    "source": [
     "# CM視聴有無でのアプリ利用時間の差を計算\n",
-    "data_df[data_df.cm_dummy == 1].gamesecond.mean() - data_df[data_df.cm_dummy == 0].gamesecond.mean()"
+    "np.mean(df[df.cm_dummy == 1].gamesecond.values) - np.mean(df[df.cm_dummy == 0].gamesecond.values)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -546,16 +553,14 @@
     "        \"area_kanto\", \"area_tokai\", \"area_keihanshin\",\n",
     "        \"job_dummy1\", \"job_dummy2\", \"job_dummy3\", \"job_dummy4\", \"job_dummy5\", \"job_dummy6\",\n",
     "        \"fam_str_dummy1\", \"fam_str_dummy2\", \"fam_str_dummy3\", \"fam_str_dummy4\"]\n",
-    "data_df[\"intercept\"] = 1\n",
-    "X = data_df[cols + [\"intercept\"]].values\n",
+    "df[\"intercept\"] = 1\n",
+    "X = df[cols + [\"intercept\"]].values\n",
     "\n",
     "# CM視聴有無ダミー\n",
-    "w2 = data_df.cm_dummy.values\n",
+    "w = df.cm_dummy.values\n",
     "\n",
     "# 目的変数群（1:アプリ利用ダミー, 2:アプリ利用回数、3:アプリ利用時間）\n",
-    "y1 = data_df.gamedummy.values\n",
-    "y2 = data_df.gamecount.values\n",
-    "y3 = data_df.gamesecond.values"
+    "y1, y2, y3 = df.gamedummy.values, df.gamecount.values, df.gamesecond.values"
    ]
   },
   {
@@ -576,10 +581,10 @@
     }
    ],
    "source": [
-    "# StatsModelsのLogitにより傾向スコアを推定\n",
-    "glm = sm.Logit(w2, X)\n",
+    "# LogisticRegressionにより傾向スコアを推定\n",
+    "glm = sm.Logit(w, X)\n",
     "result = glm.fit()\n",
-    "ps2 = result.predict(X)"
+    "ps = result.predict(X)"
    ]
   },
   {
@@ -600,7 +605,7 @@
    ],
    "source": [
     "# c統計量としてAUCをを計算\n",
-    "roc_auc_score(w2, ps2)"
+    "roc_auc_score(w, ps)"
    ]
   },
   {
@@ -621,10 +626,10 @@
    ],
    "source": [
     "# IPWによりアプリ利用ダミーへのATEを推定\n",
-    "ipwe11 = np.sum((w2 * y1) / ps2) / np.sum(w2 / ps2)  # Treated\n",
-    "ipwe10 = np.sum(((1 - w2) * y1) / (1.0 - ps2)) / np.sum((1 - w2) / (1.0 - ps2))  # Control\n",
-    "ATE1 = ipwe11 - ipwe10\n",
-    "ATE1"
+    "ipwe11 = np.sum((w * y1) / ps) / np.sum(w / ps)  # Treated\n",
+    "ipwe10 = np.sum(((1 - w) * y1) / (1.0 - ps)) / np.sum((1 - w) / (1.0 - ps))  # Control\n",
+    "ate1 = ipwe11 - ipwe10\n",
+    "ate1"
    ]
   },
   {
@@ -645,10 +650,10 @@
    ],
    "source": [
     "# IPWによりアプリ利用回数へのATEを推定\n",
-    "ipwe21 = np.sum((w2 * y2) / ps2) / np.sum(w2 / ps2)  # Treated\n",
-    "ipwe20 = np.sum(((1 - w2) * y2) / (1.0 - ps2)) / np.sum((1 - w2) / (1.0 - ps2))  # Control\n",
-    "ATE2 = ipwe21 - ipwe20\n",
-    "ATE2"
+    "ipwe21 = np.sum((w * y2) / ps) / np.sum(w / ps)  # Treated\n",
+    "ipwe20 = np.sum(((1 - w) * y2) / (1 - ps)) / np.sum((1 - w) / (1 - ps))  # Control\n",
+    "ate2 = ipwe21 - ipwe20\n",
+    "ate2"
    ]
   },
   {
@@ -669,10 +674,10 @@
    ],
    "source": [
     "# IPWによりアプリ利用時間へのATEを推定\n",
-    "ipwe31 = np.sum((w2 * y3) / ps2) / np.sum(w2 / ps2)\n",
-    "ipwe30 = np.sum(((1 - w2) * y3) / (1 - ps2)) / np.sum((1 - w2) / (1 - ps2))\n",
-    "ATE3 = ipwe31 - ipwe30\n",
-    "ATE3"
+    "ipwe31 = np.sum((w * y3) / ps) / np.sum(w / ps)\n",
+    "ipwe30 = np.sum(((1 - w) * y3) / (1.0 - ps)) / np.sum((1 - w) / (1.0 - ps))\n",
+    "ate3 = ipwe31 - ipwe30\n",
+    "ate3"
    ]
   },
   {
